--- a/tutorials/spde/spde-tutorial-semicontinuous.Rnw
+++ b/tutorials/spde/spde-tutorial-semicontinuous.Rnw
@@ -1,13 +1,14 @@
 \chapter{Semicontinuous model to daily rainfall}\label{ch:semic}
 
-
 \SweaveOpts{prefix.string=figs/semicont}
 <<sett,echo=FALSE,results=hide>>=
-options(width=75, prompt = " ", continue = "   ")
-require(splancs)
-require(INLA)
-require(gridExtra)
-inla.setOption(inla.call='remote')
+options(width=75, prompt = " ", continue = "   ") 
+require(splancs) 
+require(INLA) 
+require(gridExtra) 
+require(lattice) 
+lcall <- inla.getOption('inla.call') 
+inla.setOption(inla.call='remote') 
 @ 
 
 The daily rainfall data is one type of data that 
@@ -24,14 +25,14 @@ model to occurence and to positive values.
 
 The data is called by
 <<readdata>>=
-data(PRprec)
-PRprec[1:3, 1:10]
+data(PRprec) 
+PRprec[1:3, 1:10] 
 @ 
 and we have, for the first five days on January, 
 the summary and the number of station with rain 
 <<summ>>=
-sapply(PRprec[,4:9], summary)
-apply(PRprec[,4:9]>0, 2, summary)
+sapply(PRprec[,4:9], summary) 
+apply(PRprec[,4:9]>0, 2, summary) 
 @ 
 and we see that we have no rain in 538 stations 
 on the first day, 399 on second and 294 on third.
@@ -58,9 +59,9 @@ y_i =
 \]
 Using the data on the third day we have
 <<vardef>>=
-jday <- 6
-z <- (PRprec[,jday]>0)+0
-y <- ifelse(PRprec[,jday]>0, PRprec[,jday], NA)
+jday <- 6 
+z <- (PRprec[,jday]>0) + 0 
+y <- ifelse(PRprec[,jday]>0, PRprec[,jday], NA) 
 @ 
 
 The map of this data are showed on the left graph 
@@ -69,13 +70,13 @@ Also, the histogram of the positive precipitation
 are on the rigth graph of this Figure. 
 Both produced by the code below
 <<rain,eval=FALSE>>=
-par(mfrow=c(1, 2), mar=c(3,3,.5,0), mgp=c(1.5,0.5,0))
-hist(y, xlab='mm', col=gray(.9), main='')
-par(mar=c(0,0,0,0))
-plot(PRprec[,1:2], cex=0.3 + PRprec[,jday]/20, asp=1, col=z+1, axes=FALSE)
-q.y <- c(0, quantile(y, 0:7/7, na.rm=T))
-legend('topright', format(q.y, dig=2), pch=1, bty='n',
-       pt.cex=0.3+q.y/20, col=c(1,rep(2,length(q.y)-1)))
+par(mfrow=c(1, 2), mar=c(3,3,.5,0), mgp=c(1.5,0.5,0)) 
+hist(y, xlab='mm', col=gray(.9), main='') 
+par(mar=c(0,0,0,0)) 
+plot(PRprec[,1:2], cex=0.3 + PRprec[,jday]/20, asp=1, col=z+1, axes=FALSE) 
+q.y <- c(0, quantile(y, 0:7/7, na.rm=T)) 
+legend('topright', format(q.y, dig=2), pch=1, bty='n', 
+       pt.cex=0.3+q.y/20, col=c(1,rep(2,length(q.y)-1))) 
 @ 
 \begin{figure}\centering 
 <<vrain,echo=F,fig=T,eps=F,width=11,height=4.5>>=
@@ -122,11 +123,11 @@ To define a SPDE model we need a mesh.
 We use the mesh builded for the Paran\'a state on the 
 Chapter~\ref{ch:mesh}. 
 <<echo=F>>=
-load('prmesh2.RData')
+load('prmesh2.RData') 
 @ 
 The SPDE model definition is made by 
 <<spdedef>>=
-spde <- inla.spde2.matern(prmesh2, alpha=2)
+spde <- inla.spde2.matern(prmesh2, alpha=2) 
 @ 
 
 We have to prepare the data in 
@@ -134,7 +135,7 @@ addequate form using the stack functionality.
 First we get the predictor matrix for the 
 SPDE model effect with 
 <<A>>=
-A <- inla.spde.make.A(prmesh2, loc=as.matrix(PRprec[,1:2]))
+A <- inla.spde.make.A(prmesh2, loc=as.matrix(PRprec[,1:2])) 
 @ 
 
 Taking into account that we need to model two 
@@ -142,24 +143,24 @@ responses together, the response is a two column matrix.
 The data stack for the rain occurence is 
 <<stack>>=
 stk.z <- inla.stack(tag='est.z', 
-                    data=list(y=cbind(z, NA)), ### first column
+                    data=list(y=cbind(z, NA)), ### first column 
                     A=list(A, 1), 
-                    effects=list(
+                    effects=list( 
                       list(i.z=1:spde$n.spde), 
-                      list(z.b0=rep(1,length(z)))))
+                      list(z.b0=rep(1,length(z))))) 
 @ 
 The data stack for the precipitation amount is 
 <<stack>>=
 stk.y <- inla.stack(tag='est.y', 
-                    data=list(y=cbind(NA, y)), ### first column
+                    data=list(y=cbind(NA, y)), ### second column 
                     A=list(A, 1), 
-                    effects=list(
+                    effects=list( 
                       list(i.y=1:spde$n.spde), 
-                      list(y.b0=rep(1,length(y)))))
+                      list(y.b0=rep(1,length(y))))) 
 @ 
 The full data stack is 
 <<stk.full>>=
-stk.zy <- inla.stack(stk.z, stk.y)
+stk.zy <- inla.stack(stk.z, stk.y) 
 @ 
 
 To fit the model, we make inference to $\beta$ 
@@ -169,35 +170,35 @@ with \code{fixed=FALSE}.
 res <- inla(y ~ 0 + z.b0 + y.b0 + 
             f(i.z, model=spde) + f(i.y, copy='i.z', fixed=FALSE), 
             family=c('binomial', 'gamma'), 
-            data=inla.stack.data(stk.zy), control.compute=list(dic=TRUE),
-            control.predictor=list(A=inla.stack.A(stk.zy), compute=TRUE))
+            data=inla.stack.data(stk.zy), control.compute=list(dic=TRUE), 
+            control.predictor=list(A=inla.stack.A(stk.zy), compute=TRUE)) 
 @ 
 
 Now, we look at the summary of the posterior distribution 
 to $\alpha_z$ and $\alpha_y$ 
 <<summaries>>=
-round(res$summary.fix, 4)
+round(res$summary.fix, 4) 
 @ 
 We apply the inverse of the link function to 
 look at response scale with
 <<invlink>>=
 c(binomial(link='logit')$linkinv(res$summary.fix[1,1]), 
-  exp(res$summary.fix[2,1]))
+  exp(res$summary.fix[2,1])) 
 @ 
 and it looks similar to observed:  
 <<obs>>=
-c(occ=mean(z, na.rm=TRUE), rain=mean(y, na.rm=TRUE))
+c(occ=mean(z, na.rm=TRUE), rain=mean(y, na.rm=TRUE)) 
 @ 
 
 The summary of the posterior distribution of the 
 precision parameter on second component is
 <<sphi>>=
-res$summary.hy[1,]
+res$summary.hy[1, ] 
 @ 
 And the summary of the posterior distributio of 
 the scaling parameter $\beta$ is 
 <<sbeta>>=
-res$summary.hy[4,]               
+res$summary.hy[4, ] 
 @ 
 and we see on this summary that the random 
 effect $x_i$ is shared by $z$ and $y$. 
@@ -211,15 +212,15 @@ of $\alpha_z$, $\alpha_y$,
 $\phi$ and $\beta$ on Figure~\ref{fig:post} 
 with commands below 
 <<post,eval=FALSE>>=
-par(mfrow=c(2,2), mar=c(3,3,.5,.5), mgp=c(1.5,.5,0), las=1)
+par(mfrow=c(2,2), mar=c(3,3,.5,.5), mgp=c(1.5,.5,0), las=1) 
 plot(res$marginals.fix[[1]], type='l', ylab='Density', 
-     xlab=expression(alpha[z]))
+     xlab=expression(alpha[z])) 
 plot(res$marginals.fix[[2]], type='l', ylab='Density', 
-     xlab=expression(alpha[y]))
+     xlab=expression(alpha[y])) 
 plot(res$marginals.hy[[1]], type='l', ylab='Density', 
-     xlab=expression(phi))
+     xlab=expression(phi)) 
 plot(res$marginals.hy[[4]], type='l', ylab='Density', 
-     xlab=expression(beta))
+     xlab=expression(beta)) 
 @ 
 \begin{figure}\centering 
 <<vpost,echo=F,fig=T,eps=F,width=11,height=4.5>>=
@@ -244,12 +245,12 @@ We see on the Figure~\ref{fig:xq} the mean
 and this quantiles for each $x$ in order of 
 the posterior mean, with code below 
 <<xq,eval=F>>=
-ordx <- order(res$summary.random$i.z$mean)
-par(mar=c(3,3,0.5,0.5), mgp=c(1.5,0.5,0), las=1)
-plot(res$summary.random$i.z$mean[ordx], type='l', ylab='x',
-     ylim=range(res$summary.random$i.z[, 4:6]))
-for (i in c(4,6)) lines(res$summary.random$i.z[ordx,i], lty=2)
-abline(h=0, lty=3)
+ordx <- order(res$summary.random$i.z$mean) 
+par(mar=c(3,3,0.5,0.5), mgp=c(1.5,0.5,0), las=1) 
+plot(res$summary.random$i.z$mean[ordx], type='l', ylab='x', 
+     ylim=range(res$summary.random$i.z[, 4:6])) 
+for (i in c(4,6)) lines(res$summary.random$i.z[ordx,i], lty=2) 
+abline(h=0, lty=3) 
 @ 
 \begin{figure}\centering 
 <<vxq,echo=F,fig=T,eps=F,width=11,height=4.5>>=
@@ -268,12 +269,12 @@ We fit the model without $x$ with
 <<refit>>=
 res0 <- inla(y ~ 0 + z.b0 + y.b0, 
             family=c('binomial', 'gamma'), 
-            data=inla.stack.data(stk.zy), control.compute=list(dic=TRUE),
-            control.predictor=list(A=inla.stack.A(stk.zy), compute=TRUE))
+            data=inla.stack.data(stk.zy), control.compute=list(dic=TRUE), 
+            control.predictor=list(A=inla.stack.A(stk.zy), compute=TRUE)) 
 @ 
 and we have
 <<dics>>=
-c(res0$dic$dic, res$dic$dic)
+c(res0$dic$dic, res$dic$dic) 
 @ 
 and conclude that the spatial random effect is 
 significative to occurence and to amoung of the rain. 
@@ -288,22 +289,22 @@ and the practical range, \cite{lindgrenRL:2011}.
 The summary of the posterior distribution of 
 $log(\kappa)$ is
 <<logkappa>>=
-res$summary.hy[3,]
+res$summary.hy[3, ] 
 @ 
 
 To obtain results for the variance and for the 
 practical range we need a post processing.  
 We obtain the marginal distribution for both by
 <<resfield>>=
-res.f <- inla.spde2.result(res, 'i.z', spde, do.transf=TRUE)
+res.f <- inla.spde2.result(res, 'i.z', spde, do.transf=TRUE) 
 @ 
 The posterior mean for the marginal variance 
 <<mvar>>=
-inla.emarginal(function(x) x, res.f$marginals.variance.nominal[[1]])
+inla.emarginal(function(x) x, res.f$marginals.variance.nominal[[1]]) 
 @ 
 And to the practical range of the process we have 
 <<range>>=
-inla.emarginal(function(x) x, res.f$marginals.range.nominal[[1]])
+inla.emarginal(function(x) x, res.f$marginals.range.nominal[[1]]) 
 @ 
 
 At the Figure~\ref{fig:xpars} we look the posterior 
@@ -332,15 +333,15 @@ plot.default(res.f$marginals.range.nominal[[1]], type='l',
 Another interesting result is the map of the random field. 
 To get it we use get the projector with
 <<projgrid>>=
-data(PRborder)
-(nxy <- round(c(diff(range(PRborder[,1])), diff(range(PRborder[,2])))/.02))
+data(PRborder) 
+(nxy <- round(c(diff(range(PRborder[,1])), diff(range(PRborder[,2])))/.02)) 
 projgrid <- inla.mesh.projector(prmesh2, xlim=range(PRborder[,1]), 
-                                ylim=range(PRborder[,2]), dims=nxy)
+                                ylim=range(PRborder[,2]), dims=nxy) 
 @ 
 and get the posterior mean and posterior standard deviation with 
 <<projpred>>=
-xmean <- inla.mesh.project(projgrid, res$summary.random$i.z$mean)
-xsd <- inla.mesh.project(projgrid, res$summary.random$i.z$sd)
+xmean <- inla.mesh.project(projgrid, res$summary.random$i.z$mean) 
+xsd <- inla.mesh.project(projgrid, res$summary.random$i.z$sd) 
 @ 
 
 To good visualization, we make NA the values corresponding of the 
@@ -348,8 +349,8 @@ points of the grid out of the border of the Paran\'a state.
 To do it, we use the function \code{inout()} on \pkg{splancs} 
 package, with
 <<sp>>=
-table(xy.in <- inout(projgrid$lattice$loc, PRborder))
-xmean[!xy.in] <- xsd[!xy.in] <- NA
+table(xy.in <- inout(projgrid$lattice$loc, PRborder)) 
+xmean[!xy.in] <- xsd[!xy.in] <- NA 
 @ 
 We visualize the this on Figure~\ref{fig:xrain3}. 
 with code below 
@@ -357,7 +358,7 @@ with code below
 grid.arrange(levelplot(xmean, col.regions=topo.colors(99), 
                        xlab='', ylab='', scales=list(draw=FALSE)), 
              levelplot(xsd, col.regions=topo.colors(99), 
-                       xlab='', ylab='', scales=list(draw=FALSE)), nrow=1)
+                       xlab='', ylab='', scales=list(draw=FALSE)), nrow=1) 
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
