--- a/tutorials/spde/updates.tex
+++ b/tutorials/spde/updates.tex
@@ -1,19 +1,16 @@
 \begin{verbatim}
-2013 October 02:
- * mesh improvements:
-  . use the new Finn's functions: inla.mesh.2d and inla.noncovexhull 
-  . non-convex, SpatialPolygons 
- * toy-example improved (maybe more clear...) 
- * new chapters: 
-  . simulation and likelihood through SPDE
-  . point process 
-  . preferential sampling 
-  . spatio temporal example 
-  . data cloning
+2013 December 21: 
+ * fix several missprints
+ * add details on: likelihood, semicontinuous and spacetime examples 
 2013 October 08: 
- * Finn's suggestions to make clear the stack with two likelihoods examples and on non-stationary
-
-to do: 
- ** English improvement ** 
-
+ * Finn's suggestions on two likelihood examples 
+2013 October 02:
+ * mesh news: inla.mesh.2d, inla.noncovexhull, SpatialPolygons 
+ * toy-example improved (maybe more clear...) 
+ * new chapters: likelihood through SPDE, point process, 
+  preferential sampling, spatio temporal, data cloning
+2013 March 21:
+ * non-stationary example and joint covariate modelling
+2013 March 01: 
+ * first draft: introduction, toy example, rainfall on Parana State
 \end{verbatim}
