--- a/tutorials/spde/spde-tutorial-datacloning.Rnw
+++ b/tutorials/spde/spde-tutorial-datacloning.Rnw
@@ -1,6 +1,6 @@
 \chapter{Data cloning example}\label{ch:dclon} 
 
-\SweaveOpts{prefix.string=figs/dclon}
+\SweaveOpts{prefix.string=figs/dclon} 
 <<sett,echo=F,results=hide>>=
 options(width=75, prompt = " ", continue = "   ")
 require(INLA)
@@ -27,8 +27,8 @@ coords <- as.matrix(SPDEtoy[,1:2])
 @ 
 with the mesh 
 <<mesh>>=
-(mesh <- inla.mesh.create.helper(coords, 
-                                 max.e=c(0.15, 0.2), cutoff=0.02))$n 
+(mesh <- inla.mesh.2d(coords, cutoff=0.05,
+                      max.edge=c(0.1, 0.2)))$n 
 @ 
 to build the model
 <<spde>>=
@@ -75,30 +75,30 @@ We collect the results of the posterior mean
 and posterior variance of each parameter with 
 <<>>=
 r <- list()
-r$intercept <- sapply(resk, function(x)
+r$Intercept <- sapply(resk, function(x)
                      c(x$summary.fix[1,1], x$summary.fix[1,2]^2))
-r$variance.lik <- sapply(resk, function(x) {
+r$Likelihood.Variance <- sapply(resk, function(x) {
   d <- inla.tmarginal(function(x) 1/x, x$marginals.hyperpar[[1]]) 
   r <- inla.emarginal(function(x) x, d)
   c(r, inla.emarginal(function(x) (x-r)^2, d))
 })
-r$marginal.variance <- sapply(res.f, function(x) {
+r$Marginal.RF.Variance <- sapply(res.f, function(x) {
   e <- inla.emarginal(function(x) x, x$marginals.variance.nom[[1]])
   c(e, inla.emarginal(function(x) (x - e)^2,
                       x$marginals.variance.nominal[[1]]))
 })
-r$kappa <- sapply(resk, function(x) {
+r$Kappa <- sapply(resk, function(x) {
   e <- inla.emarginal(function(x) exp(x), x$marginals.hy[[3]])
   c(e, inla.emarginal(function(x) (exp(x) - e)^2, x$marginals.hy[[3]]))
 })
 @ 
 <<likfit,echo=F,results=hide>>=
-source('spde-tutorial-functions.R')
-inla.setOption(inla.call=noremote)
-A <- inla.spde.make.A(mesh, loc=coords)
-opt.b <- optim(c(-4,2,-1.5), nllf, hessian=TRUE, method='BFGS',
-               X=matrix(1,nrow(coords)), y=SPDEtoy[,3], A=A, verbose=FALSE)
-lk.est <- par2user(opt.b$par, A, matrix(1,nrow(coords),1), SPDEtoy[,3])[c(4,3,1,2)]
+source('spde-tutorial-functions.R') 
+inla.setOption(inla.call=noremote) 
+A <- inla.spde.make.A(mesh, loc=coords) 
+opt.b <- optim(c(-2,2), negLogLikFun, hessian=TRUE, method='BFGS', 
+               X=matrix(1,nrow(coords)), A=A, y=SPDEtoy[,3], spde=spde) 
+lk.est <- par2user(opt.b$par, matrix(1,nrow(coords),1), A, SPDEtoy[,3], spde) 
 @ 
 
 The main think in data clonning is to visualize 
@@ -113,29 +113,24 @@ variance of each parameter ($\beta_0$, $\sigma_y^2$,
 $\sigma_x^2$ and $\kappa$) relative to 
 the result without clone ($k=1$). 
 Also, to compare, we visualize the 
-likelihood estimate. 
-This graphs are on the 
-Figure~\ref{fig:dclon} with 
+likelihood estimate. This graphs are on the 
+Figure~\ref{fig:dclon} with following commands
 <<dcloneplot, eval=F>>=
-par(mfrow=c(2, 2), mar=c(3,3,2,1), mgp=c(1.5,.5,0))
-for (i in 1:length(r)) {
-  plot(k, r[[i]][2, ]/r[[i]][2,1], type='o', ylim=c(0, 1.2),
-       ylab='relative to k=1', main=names(r)[i])
-  lines(k, r[[i]][1, ]/r[[i]][1,1], type='o', lty=2, col=2)
-  abline(h=1, col=4, lty=3)
-  abline(h=lk.est[i]/r[[i]][1,1], col=3, lty=3)
+par(mfrow=c(2, 2), mar=c(3,3,2,1), mgp=c(1.5,.5,0)) 
+for (i in 1:length(r)) { 
+  plot(k, r[[i]][2, ]/r[[i]][2,1], type='o', ylim=c(0, 1.2), 
+       ylab='relative to k=1', main=names(r)[i]) 
+  lines(k, r[[i]][1, ]/r[[i]][1,1], type='o', lty=2, col=2) 
+  abline(h=lk.est[i]/r[[i]][1,1], col=4, lty=3) 
 }
-legend('bottomleft', c('Posterior mean', 'Posterior variance'),
-       lty=1, col=2:1, bty='n')
 @ 
 \setkeys{Gin}{width=0.9\textwidth}
 \begin{figure}\centering 
 <<dclonevis,fig=T,eps=F,echo=F,width=5.5,height=5.5>>=
 <<dcloneplot>>
 @ 
-\caption{Relative posterior mean (blue dashed line), 
-  likelihood estimate (green dashed line) and 
-  posterior variance (black line) for each parameter 
-  of the toy model.}
+\caption{Likelihood estimate (green), 
+  posterior mean (red) and posterior variance (black), 
+  relatives to the value with $k=1$.} 
 \label{fig:dclon}
 \end{figure}
