--- a/tutorials/spde/spde-tutorial-jcovar.Rnw
+++ b/tutorials/spde/spde-tutorial-jcovar.Rnw
@@ -1,6 +1,6 @@
-\chapter{Joint modeling a covariate with misalignment}
+\chapter{Joint modeling a covariate with misalignment}\label{ch:jcovar} 
 
-\SweaveOpts{prefix.string=figs/jcovar}
+\SweaveOpts{prefix.string=figs/jcovar} 
 \setkeys{Gin}{width=0.99\textwidth}
 <<sett,echo=F,results=hide>>=
 options(width=75, prompt = " ", continue = "   ")
