--- a/tutorials/spde/spde-tutorial-rain.Rnw
+++ b/tutorials/spde/spde-tutorial-rain.Rnw
@@ -1,11 +1,13 @@
 \chapter{Non-Gaussian response: Precipitation on Paran\'a}\label{ch:prprec}
 
-\SweaveOpts{prefix.string=figs/rain}
+\SweaveOpts{prefix.string=figs/rain} 
 <<opts,echo=F,results=hide>>=
 options(width=75, prompt = " ", continue = "   ")
 require(INLA)
-require(gridExtra)
-inla.setOption(inla.call='remote')
+require(lattice) 
+require(gridExtra) 
+lcall <- inla.getOption('inla.call') 
+inla.setOption(inla.call='remote') 
 @ 
 
 A very common data in spatial statistics is the climate data. 
@@ -26,7 +28,7 @@ Paran\'a state and around its border.
 We have these dataset on the \pkg{INLA} package 
 and call it with 
 <<start,results=hide>>=
-data(PRprec)
+data(PRprec) 
 @ 
 We have the coordinates at first two columns, 
 altitude at third column  
@@ -66,31 +68,31 @@ In this section, we analyze the mean of daily
 accumulated precipitation on January of 2012. 
 We compute this covariate with
 <<meanjan>>=
-PRprec$precMean <- rowMeans(PRprec[,3+1:31], na.rm=TRUE)
+PRprec$precMean <- rowMeans(PRprec[,3+1:31], na.rm=TRUE) 
 @ 
 
 Also we have the Paran\'a state border 
 <<prborder>>=
-data(PRborder)
+data(PRborder) 
 @ 
 
 We visualize the locations on 
 Figure~\ref{fig:paranastations}, 
 with the commands bellow
 <<precviz,eval=F,results=hide>>=
-par(mfrow=c(1,2), mar=c(0,0,2,0))
-plot(PRborder, type='l', asp=1, axes=FALSE, main='Altitude')
-points(PRprec[1:2], col=is.na(PRprec$Alt)+1,
+par(mfrow=c(1,2), mar=c(0,0,2,0)) 
+plot(PRborder, type='l', asp=1, axes=FALSE, main='Altitude') 
+points(PRprec[1:2], col=is.na(PRprec$Alt)+1, 
        cex=ifelse(is.na(PRprec$Alt), 1, .3+PRprec$Alt/1500)) 
-legend('topright', format(0:4*350), bty='n', pch=1, pt.cex=.3+0:4*35/150)
-lines(PRborder[1034:1078, ], col='cyan')
+legend('topright', format(0:4*350), bty='n', pch=1, pt.cex=.3+0:4*35/150) 
+lines(PRborder[1034:1078, ], col='cyan') 
 
 plot(PRborder, type='l', asp=1, axes=FALSE, 
-     main=paste('Mean of daily accumulated precipitation (mm)'))
-points(PRprec[1:2], cex=0.3+PRprec$precMean/20) 
+     main=paste('Mean of daily accumulated precipitation (mm)')) 
+points(PRprec[1:2], cex=0.3+PRprec$precMean/20)  
 legend('topright', format(seq(1,21,5)), 
        bty='n', pch=1, pt.cex=0.3+seq(1,21,5)/20) 
-points(PRprec[ii, 1:2], pch=3, col=2)
+points(PRprec[ii, 1:2], pch=3, col=2) 
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
@@ -151,20 +153,20 @@ We compute the distances in Km units
 using the \code{spDists()} function 
 from \pkg{sp} package 
 <<project>>=
-coords <- as.matrix(PRprec[,1:2])
-mat.dists <- spDists(coords, PRborder[1034:1078,], longlat=TRUE)
+coords <- as.matrix(PRprec[,1:2]) 
+mat.dists <- spDists(coords, PRborder[1034:1078,], longlat=TRUE) 
 @ 
 This function computes the distance between each 
 location on the first points set to each one on the 
 second points set. So, we need to take the minimum
 <<distseacalc>>=
-PRprec$"seaDist" <- apply(mat.dists, 1, min)
+PRprec$"seaDist" <- apply(mat.dists, 1, min) 
 @ 
 We see the dispersion plots 
 at Figure~\ref{fig:disppred}. 
 <<dispp,eval=F,results=hide>>=
-par(mfrow=c(2,2), mar=c(3,3,0.5,0.5), mgp=c(1.7,.7,0), las=1)
-for (i in c(1:3, ncol(PRprec)))  plot(PRprec[c(i,ncol(PRprec)-1)], cex=.5)
+par(mfrow=c(2,2), mar=c(3,3,0.5,0.5), mgp=c(1.7,.7,0), las=1) 
+for (i in c(1:3, ncol(PRprec)))  plot(PRprec[c(i,ncol(PRprec)-1)], cex=.5) 
 @ 
 \setkeys{Gin}{width=0.9\textwidth}
 \begin{figure}\centering
@@ -216,9 +218,9 @@ the GRF, intercept, west coordinate and distance to sea
 stk.dat <- inla.stack(data=list(y=PRprec$precMean), 
                       A=list(A,1), tag='dat', 
                       effects=list(list(i=1:spde$n.spde), 
-                        list(Intercept=rep(1, nrow(A)), 
-                             gWest=inla.group(coords[,1]), 
-                             gSeaDist=inla.group(PRprec$seaDist))))
+                        data.frame(Intercept=1, 
+                                   gWest=inla.group(coords[,1]), 
+                                   gSeaDist=inla.group(PRprec$seaDist)))) 
 @ 
 
 We fit the two models using the same stack data. 
@@ -437,10 +439,10 @@ g.seadist <- ug.seadist[ig0]
 and put it into on a stack to prediction and 
 join with the stack data 
 <<stkprd>>=
-stk.prd <- inla.stack(data=list(y=NA), A=list(Aprd,1,1), 
+stk.prd <- inla.stack(data=list(y=NA), A=list(Aprd,1), 
                       effects=list(i=1:spde$n.spde, 
-                        Intercept=rep(1,nrow(Aprd)), 
-                        gSeaDist=g.seadist), tag='prd')
+                          data.frame(Intercept=1, 
+                                     gSeaDist=g.seadist)), tag='prd') 
 stk.all <- inla.stack(stk.dat, stk.prd)
 @ 
 
@@ -469,16 +471,13 @@ sd.prd[xy.in] <- r2.sead$summary.fitted.values$sd[id.prd]
 @ 
 and we visualize on the Figure~\ref{fig:xrain1} 
 the posterior mean and standard deviation to 
-response with commands bellow on 
+response with commands bellow  
 <<xrain1c,eval=F>>=
-grid.arrange(levelplot(xmean, col.regions=topo.colors(99), 
-                       xlab='', ylab='', scales=list(draw=FALSE)), 
-             levelplot(xsd, col.regions=topo.colors(99), 
-                       xlab='', ylab='', scales=list(draw=FALSE)), 
-             levelplot(m.prd, col.regions=topo.colors(99), 
-                       xlab='', ylab='', scales=list(draw=FALSE)), 
-             levelplot(sd.prd, col.regions=topo.colors(99), 
-                       xlab='', ylab='', scales=list(draw=FALSE)))
+library(gridExtra) 
+do.call('grid.arrange', 
+        lapply(list(xmean, xsd, m.prd, sd.prd), 
+               levelplot, col.regions=terrain.colors(16), 
+               xlab='', ylab='', scales=list(draw=FALSE)))
 @ 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{figure}\centering
