--- a/tutorials/spde/spde-tutorial-spde-introduction.Rnw
+++ b/tutorials/spde/spde-tutorial-spde-introduction.Rnw
@@ -6,10 +6,11 @@
 \SweaveOpts{prefix.string=figs/mesh}
 <<sett,echo=F,results=hide>>=
 options(width=75, prompt = " ", continue = "   ")
-require(INLA)
+require(INLA) 
 data(SPDEtoy)
 load('mesh1.RData')
 load('mesh5.RData')
+source('spde-tutorial-functions.R') 
 @ 
 
 Because the SPDE model is defined on the 
@@ -108,22 +109,22 @@ It can be done by the \code{inla.spde2.precision()} function.
 On this function, we have to provide the SPDE model 
 and the parameters $\theta$ on the SPDE parametrization. 
 $\theta$ is a length two vector where the second element 
-is the logarithim of the scale parameter, $log(\kappa)$, 
-and the second one is the 'local variance parameter' $\tau$
+is the logarithim of the scale parameter, log($\kappa$), 
+and the first one is the 'local variance parameter' $\tau$
 such that the marginal variance $\sigma_x^2$ is 
 \[ \sigma_x^2 = \frac{1}{4\pi\tau^2\kappa^2} \] 
 and we have that 
-\[log(\tau) = \theta_1 = -log(4\kappa\sigma_x^2\pi)/2 \]. 
+\[\log(\tau) = \theta_1 = -\log(4\pi\kappa^2\sigma_x^2)/2 \;.\] 
 
-Considering $\kappa=5$ and $\sigma_x^2=1$ 
+We do the simulation considering $\kappa=5$ and $\sigma_x^2=1$ 
 <<params>>=
 kappa <- 5;    s2x <- 1
 @ 
-we have 
+so, we have 
 <<theta>>=
-theta <- c(-log(2*kappa*s2x*sqrt(pi)), log(kappa))
+theta <- c(-log(4*pi*s2x*kappa^2), log(kappa))
 @ 
-and we have the precision matrix by 
+and we have the precision matrix $\bQ(\theta)$ by 
 <<q5>>=
 Q5 <- inla.spde2.precision(spde5, theta)
 @ 
@@ -144,17 +145,19 @@ one or more samples, by defining a function that
 need just the coordinates and model parameters. 
 A mesh can be provided and if not it is also 
 generated within this function 
-<<loadrspde,echo=F,results=hide>>=
-source('spde-tutorial-functions.R') 
-@ 
 <<rspde>>=
 rspde
 @ 
 
-We can generate samples at a milion of locations in some seconds by 
+We can generate samples at a milion of locations 
+in some seconds  
 <<sample>>=
 pts1 <- matrix(runif(2e6), ncol=2)
 x1 <- rspde(pts1, kappa=5)
+@ 
+
+Some summary
+<<summx1>>=
 summary(x1)
 table(x1>0)
 @ 
@@ -171,72 +174,94 @@ This function is used on some of next Chapters.
 
 \section{Maximum likelihood inference}
 
-We have that the latent random field is distributed as 
-\[ x \sim N(0, \bQ)\;.\]
-Under the toy model where we just add a noise, we have 
-\[y|x \sim N(\bA x, \b1 \sigma^2_y)\;.\]
-So, it is easy to integrate out $x$ an get the 
-marginal likelihood and this is 
-\[ y \sim N(\bA x, (\bA \bQ^{-1}\bA' + \b1\sigma_y^2)) \;.\]
+We have that the latent random field $x$ 
+is distributed as 
+\[ x|\bQ \sim N(0, \bQ^{-1})\;\]
+where $\bQ = \bQ(\theta)$, 
+$\theta=\{\theta_1, \theta_2\}$ with 
 
-To eval the marginal likelihood efficiently 
+$\theta_1$=log($\tau$) and $\theta_2$=log($\kappa$). 
+Under the toy model, whe have an GF plus noise 
+for the observation data. So, we have 
+\[y|\mu_y,x,\bA,\bQ,\sigma_y^2 \sim N(\mu_y + \bA x, \bI \sigma^2_y)\;.\]
+Integrating out $x$, we have that 
+\[ y | \mu_y, \bQ, \bA, \sigma_y^2 \sim 
+N(\mu_y, (\bA \bQ^{-1}\bA' + \bI\sigma_y^2)^{-1}) \;.\]
+
+The log-likelihood function, 
+marginalized with respect $x$, becomes 
+\[
+-\frac{n}{2}\log(2\pi)-|\Sigma|-
+\frac{1}{2}(y-\bF\beta)^{'}\Sigma^{-1}(y-\bF\beta) 
+\]
+where 
+$\Sigma = (\bA \bQ^{-1}\bA' + \bI\sigma_y^2)^{-1}$ 
+and $\bQ=\bQ(\theta) = \bQ(\tau,\kappa)$. 
+We choose $\tau^{'}$ to have marginal variance of $x$ equal 1, 
+$\bQ(\tau^{'}, \kappa))$ = $\bQ^{'}$. 
+In this case we write 
+$\bW = (r\bI + Q(\tau^{'}, \kappa))$ 
+where $r=\frac{\sigma^2_e}{\sigma^2_x}$ and 
+\[
+\Sigma = \sigma^2_x\bW\;.
+\] 
+
+Now, we can write a concentrated likelihood deriving 
+the likelihood with respect to $\sigma^2_x$ and $\beta$. 
+We have that 
+\[ (\bF^{'}\bW\bF)\hat{\beta} = \bF^{'}\bW\bby \;.\] 
+and  
+\[
+\hat{\sigma}^2_x = (y_i-\bF\hat{\beta})^{'}\bW(y_i-\bF\hat{\beta})/n
+\] 
+
+Now, we can work with the log-likelihood 
+as a function of the noise relative variance and 
+the scale parameter $\kappa$. 
+The concentrated log-likelihood can be writed as 
+\[
+-\frac{1}{2}\{|\bW| + n[\log(2\pi\hat{\sigma}^2_x)+1]\}
+\]
+And we can use one of the quasi-Newton 
+optimization algorithim to find the maximum 
+likelihood estimate of each the two parameters 
+on the concentrated likelihood. 
+These parameters are these one the $\bW$ matrix and 
+are parametrized as log($r$) and log($\kappa$). 
+
+To eval the likelihood function efficiently 
 we need to take care on the evaluation of 
-the determinant of the covariance 
-matrix $(\bA \bQ^{-1}\bA' + \b1\sigma_y^2)$ and also 
-the evaluation of the precision matrix 
-$(\bA \bQ^{-1}\bA' + \b1\sigma_y^2)^{-1}$. 
+the determinant $|\bW|$ and of $\bW$ itself. 
 
-To evaluate the determinant, we use the 
-matrix determinant lemma that, for 
-any invertible matrix $\bW$ and also 
-invertible matrix $\bC$ we have  
-\[det(\bC + \bU \bW \bV') = 
-  det(\bW^{-1} + \bV'\bC^{-1}\bU) det(\bW) det(\bC)\;.\]
-Considering $\bW=\bQ^{-1}$ and $\bC=\b1 \sigma_y^2$ 
-we have the following function to implement it 
-<<precdetf>>=
-prec.det.f <- function(U, Q, tau.y) {
-  d1 <- determinant(crossprod(U*tau.y, U) + Q)$modulus
-  (d1 - determinant(Q)$modulus) - nrow(U)*log(tau.y)
-}
+$\bW = (r\bI + Q(\tau^{'}, \kappa))$ 
+
+To evaluate the determinant, we use a 
+matrix determinant lemma such that we have 
+\[\det(r\bI + \bA \bQ \bA^{'}) = 
+  \det(\bQ + \bA^{'}r\bA) \det(\bQ) \det(r\bI)\;.
+  \]
+We implement the following function to compute it 
+<<precdetf,echo=F>>=
+precDetFun
 @ 
-where \code{tau.y} is the likelihood precision.
 
 The precision matrix can be evaluated 
 using the Woodbury matrix identity. 
 It says that for $\bC$ and $\bW$ invertible 
 matrices we have  
-\[(\bC + \bU \bW \bV)^{-1} = 
- \bC^{-1} - \bC^{-1}\bU(\bW^{-1} + 
-  \bV \bC^{-1}\bU)^{-1}\bV \bC^{-1}\;.\]
+\[(r\bI + \bA \bQ \bA^{'})^{-1} = 
+ r^{-1}\bI - r^{-1}\bI\bA(\bQ + 
+  \bA r^{-1}\bA)^{-1}\bA r^{-1}\;.\]
 We implement it with the following function
-<<precf>>=
-precy.f <- function(U, Q, tau.y) {
-  Bi <- Diagonal(nrow(U), rep(tau.y, nrow(U)))
-  VBi <- crossprod(U, Bi)
-  R <- inla.qinv(Q + VBi%*%U) 
-  forceSymmetric(Bi - crossprod(VBi, R)%*%VBi)
-}
+<<precf,echo=F>>=
+precFun
 @ 
 
-Considering $\theta$ and $log(\sigma_y^2)$ the 
+Considering $\theta$ and log($\sigma_y^2$) the 
 three parameter vetor, we have the following 
 negative of the log likelihood function 
-<<nllf>>=
-nllf <- function(pars, X, y, A, verbose=TRUE) {
-  if (verbose) cat(pars, '')
-  m <- inla.spde2.precision(spde, theta=pars[1:2]) 
-  ldet <- prec.det.f(A, m, exp(-pars[3]))
-  m <- precy.f(A, m, exp(-pars[3]))
-  Xm <- crossprod(X,m)
-  beta <- drop(solve(Xm%*%X, sum(Xm*y)))
-  y <- drop(y-X%*%beta)
-  ss <- y%*%m%*%y
-  r <- drop((ss + length(y)*log(2*pi) + ldet)/2)
-  if (verbose) cat(beta, r, '\n')
-  attr(r, 'beta') <- beta
-  return(r)
-}
+<<nllf,echo=F>>=
+negLogLikFun
 @ 
 
 We proceed the maximum likelihood estimation, 
@@ -257,57 +282,44 @@ SPDE model (with $\alpha=2$)
 and the projector matrix
 <<dprep>>=
 xy <- as.matrix(SPDEtoy[,1:2])
-(mesh <- inla.mesh.2d(xy, max.edge=1/(c(1.7,0.7)*kappa), 
-                      cutoff=1/(5*kappa)))$n
+(mesh <- inla.mesh.2d(xy, max.edge=c(0.5, 1)/kappa, 
+                      cutoff=0.1/kappa))$n 
 spde <- inla.spde2.matern(mesh)
 A <- inla.mesh.project(mesh, loc=xy)$A
-@ 
+@
 
 The maximum likelihood estimation is done 
 using the \code{optim()} function. 
 Using the default Nelder-Mead method
-<<nm>>=
-opt <- optim(c(-4,2,-1.5), nllf, hessian=TRUE,
-             X=matrix(1,nrow(xy)), y=SPDEtoy[,3], A=A, verbose=FALSE)
-@ 
-and the BFGS method 
-<<bfgs>>=
-opt.b <- optim(c(-4,2,-1.5), nllf, hessian=TRUE, method='BFGS',
-               X=matrix(1,nrow(xy)), y=SPDEtoy[,3], A=A, verbose=FALSE)
-@ 
-we have the same results 
-<<nmbfgs>>=
-rbind(opt$par, opt.b$par)
+<<nm>>= 
+opt <- optim(log(c(sigma2e/sigma2x, kappa)), negLogLikFun, hessian=TRUE,
+             X=matrix(1,nrow(xy)), A=A, y=SPDEtoy[,3], spde=spde) 
 @ 
 
 We also define a function to map the 
 SPDE model parameters to the 
 $\sigma_x^2$ and $\kappa$ user parameters. 
 The function bellow recieve $\theta$, 
-$\log(\sigma_y^2)$ and $\beta$ (regression 
+log($\sigma_y^2$) and $\beta$ (regression 
 parameters) and return $\sigma_x^2$, $\kappa$, 
-$sigma_y^2$ and $\beta$. 
-<<par2user>>=
-par2user <- function(pars, A, X, y) {
-  m <- inla.spde2.precision(spde, theta=pars[1:2]) 
-  m <- precy.f(A, m, exp(-pars[3]))
-  Xm <- crossprod(X,m)
-  beta <- drop(solve(Xm%*%X, sum(Xm*y)))
-  k2s22 <- exp(sum(pars[1:2])*2)
-  c(s2x=1/(4*pi*k2s22), kappa=exp(pars[2]), s2e=exp(pars[3]), beta=beta)
-}
+$\sigma_y^2$ and $\beta$. 
+<<par2user,echo=F>>=
+par2user
 @ 
+
 We use this function to compare the results with 
-the results by \code{geoR} package. 
-<<lkf,echo=F,results=hide>>=
+the results by \code{geoR} package 
+<<lkfgeoR>>=
 require(geoR)
 system.time(lkf <- likfit(as.geodata(SPDEtoy),
-                          ini=c(1,1/7), kappa=1, nugget=sigma2e))
+                          ini=c(sigma2x, 1/kappa), 
+                          kappa=1, ### kappa in geoR is nu 
+                          nugget=sigma2e))
 @ 
-We have 
+and have similar results 
 <<compare>>=
-rbind(spde=par2user(opt$par, A=A, X=matrix(1, nrow(A)), y=SPDEtoy[,3]),
-      geoR=c(lkf$sigmasq, 1/lkf$phi, lkf$nugget, lkf$beta), 
-      true=c(sigma2x, kappa, sigma2e, beta0))
+rbind(spde=par2user(opt$par, matrix(1, nrow(A)), A, SPDEtoy[,3], spde),
+      geoR=c(lkf$beta, lkf$nugget, lkf$sigmasq, 1/lkf$phi), 
+      true=c(beta0, sigma2e, sigma2x, kappa)) 
 @ 
 
